// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NetworkIcon > should render when isCompact = false 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600 ring-theme-background duration-100 css-1nqcsx"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="css-1i4b0eq"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg
        id="ark"
        viewBox="0 0 36.3 30.6"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon > should render when isCompact = true 1`] = `
<DocumentFragment>
  <div
    aria-label="ARK"
    class="inline-flex h-5 w-5 items-center justify-center text-theme-primary-600 border-theme-primary-100 dark:border-theme-primary-600"
    data-testid="NetworkIcon-ARK-ark.mainnet"
  >
    <div
      class="css-1i4b0eq"
      data-testid="NetworkIcon__icon"
      height="20"
      width="20"
    >
      <svg
        id="ark"
        viewBox="0 0 36.3 30.6"
        x="0"
        xml:space="preserve"
        xmlns="http://www.w3.org/2000/svg"
        y="0"
      >
        <path
          d="M18.2 10.7L0 30.6 18.2 0l18.1 30.6-18.1-19.9zM10 24.2l2.9-3.2h10.6l2.9 3.2H10zm5-5.4l3.2-3.4 3.2 3.4H15z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`NetworkIcon > should render with placeholder 1`] = `
<DocumentFragment>
  <div
    class="ring-theme-background duration-100 css-1nqcsx"
    data-testid="NetworkIcon__placeholder"
  />
</DocumentFragment>
`;
